BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call_Followup_Template_vod__c.object
<CustomObject>
    <description>An Interaction Follow-up Template controls how follow-up activities are created on Interaction Reports. One Template per Follow-up type (todo, medical information,...).</description>
    <fields>
        <fullName>Assign_to_Creator_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If this checkbox is set, the follow-up activity will be assigned to the person creating the activity.</description>
        <label>Assign to Creator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Before_Due_vod__c</fullName>
        <description>This field determines the due date for the activity. The due date is set to the number of calendar days after the activity is created.</description>
        <label>Days Before Due</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Default_Task_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this checkbox to denote a follow-up activity as default. When a new follow-up activity is created on a call report, this setting is used to determine which activity is the initial activity type.</description>
        <label>Default Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_vod__c</fullName>
        <description>Allows display of follow up templates by user&apos;s language. Any follow up template that match the user&apos;s language or has a blank value will be displayed.</description>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether an email notification should be sent for this follow up template.</description>
        <label>Send Notification Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field can set a specific user to always be assigned the follow-up activities created by this template. This value is used when the &quot;Assign to Creator&quot; checkbox is cleared.</description>
        <label>Default Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Call_Followup_Template_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interaction Followup Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Assign_to_Creator_vod__c</columns>
        <columns>Days_Before_Due_vod__c</columns>
        <columns>User_vod__c</columns>
        <columns>Default_Task_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Interaction Followup Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction Followup Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>